--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Boxmodel Drone 2025</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div>
+            <a href="./index.html">
+                <img src="./images/logo.svg" alt="logo DJI">
+            </a>
+        </div>
+        <div class="intro">
+            <h1>Dron DJI Mini 4 Pro</h1>
+            <p>Pořizujte dechberoucí letecké záběry s dosud nejpokročilejším dronem DJI s minikamerou - Mini 4 Pro. Díky výkonným zobrazovacím funkcím, všesměrovému snímání překážek, funkcí ActiveTrack 360° s novým režimem Trace a podporou přenosu v rozlišení FullHD na vzdálenost až 20 km, dokáže oslovit nejen začátečníky, ale i náročnější uživatele kvadrokoptér</p>
+            <a href="#" class="button"></a>
+        </div>
+    </header>
 </body>
 </html>
