--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <header class="header">
-        <div>
-            <a href="./index.html">
-                <img src="./images/logo.svg" alt="logo DJI">
+        <div class="header__nav">
+            <a class="header__link" href="./index.html">
+                <img class="header__image" src="./images/logo.svg" alt="logo DJI">
             </a>
         </div>
-        <div class="intro">
+        <div class="header__intro">
             <h1>Dron DJI Mini 4 Pro</h1>
             <p>Pořizujte dechberoucí letecké záběry s dosud nejpokročilejším dronem DJI s minikamerou - Mini 4 Pro. Díky výkonným zobrazovacím funkcím, všesměrovému snímání překážek, funkcí ActiveTrack 360° s novým režimem Trace a podporou přenosu v rozlišení FullHD na vzdálenost až 20 km, dokáže oslovit nejen začátečníky, ale i náročnější uživatele kvadrokoptér</p>
-            <a href="#" class="button"></a>
+            <a href="#" class="button button--light"></a>
         </div>
     </header>
 </body>
