--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Boxmodel Drone 2025</title>
 </head>
@@ -16,9 +15,28 @@
         </div>
         <div class="header__intro">
             <h1>Dron DJI Mini 4 Pro</h1>
-            <p>Pořizujte dechberoucí letecké záběry s dosud nejpokročilejším dronem DJI s minikamerou - Mini 4 Pro. Díky výkonným zobrazovacím funkcím, všesměrovému snímání překážek, funkcí ActiveTrack 360° s novým režimem Trace a podporou přenosu v rozlišení FullHD na vzdálenost až 20 km, dokáže oslovit nejen začátečníky, ale i náročnější uživatele kvadrokoptér</p>
-            <a href="#" class="button button--light"></a>
+            <p>Pořizujte dechberoucí letecké záběry s dosud nejpokročilejším dronem DJI s minikamerou &ndash;&nbsp;Mini 4 Pro. Díky výkonným zobrazovacím funkcím, všesměrovému snímání překážek, funkcí ActiveTrack 360° s novým režimem Trace a podporou přenosu v rozlišení FullHD na vzdálenost až 20 km, dokáže oslovit nejen začátečníky, ale i náročnější uživatele kvadrokoptér</p>
+            <a href="#" class="button button--light">prohlédnout funkce</a>
         </div>
     </header>
+    <main>
+        <section class="parametry">
+            <h2>Popis a parametry dronu</h2>
+            <p>Mini 4 Pro stejně jako jeho předchůdci <b>váží méně než 249 g</b> pro pohodlné používání na cestách a <b>mírnější legislativní nároky</b> na piloty a provozovatele v různých regionech.</p>
+            <p>Kamera Mini 4 Pro se chlubí <b>1/1,3palcovým snímačem CMOS</b> s funkcí Dual Native ISO Fusion, <b>clonou f/1,7</b> a 2,4μm pixely 4 v 1, takže snadno zachytíte i složitější detaily. Díky <b>HDR videu v 4K/60 fps kvalitě</b> a zpomalenému videu při <b>4K/100 fps</b> můžete zachytit detailní záběry, zatímco se <b>10-bit D-Log M</b> postará o ohromující škálu 1,07 bilionu barev a HLG zase o větší flexibilitu při editaci a sdílení. HLG díky vysokému dynamickému rozsahu zaručuje, že <b>barvy a jas zůstanou přirozené</b> a realistické <b>bez nutnosti úprav</b> nebo konverze formátu.</p>
+            <figure class="img-block">
+                <img class="img-fluid" src="./images/dron-v-letu.avif" alt="dron-v-letu">
+                <figcaption class="img-block__caption">Pohed zpředu na dron DJI Mini Pro 4</figcaption>
+            </figure>
+        </section>
+        <section class="text-box">
+            <header class="text-box__title">
+                <p class="heading heading__h3">Kvalitní noční záběry z dronu a RAW</p>
+            </header>
+            <div class="text-box__content">
+                <p class="">Vylepšený algoritmus redukce šumu nočních snímků u modelu Mini 4 Pro vám pomůže pořizovat jasnější a kvalitnější záběry, i za šera nebo v noci. Každý drobný detail navíc můžete zaznamenat díky 48MP RAW a nové generaci SmartPhoto, která kombinuje HDR zobrazování, rozpoznávání scén a mnoho dalších funkcí.</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
