--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="parametry">
             <h2>Popis a parametry dronu</h2>
             <p>Mini 4 Pro stejně jako jeho předchůdci <b>váží méně než 249 g</b> pro pohodlné používání na cestách a <b>mírnější legislativní nároky</b> na piloty a provozovatele v různých regionech.</p>
-            <p>Kamera Mini 4 Pro se chlubí <b>1/1,3palcovým snímačem CMOS</b> s funkcí Dual Native ISO Fusion, <b>clonou f/1,7</b> a 2,4μm pixely 4 v 1, takže snadno zachytíte i složitější detaily. Díky <b>HDR videu v 4K/60 fps kvalitě</b> a zpomalenému videu při <b>4K/100 fps</b> můžete zachytit detailní záběry, zatímco se <b>10-bit D-Log M</b> postará o ohromující škálu 1,07 bilionu barev a HLG zase o větší flexibilitu při editaci a sdílení. HLG díky vysokému dynamickému rozsahu zaručuje, že <b>barvy a jas zůstanou přirozené</b> a realistické <b>bez nutnosti úprav</b> nebo konverze formátu.</p>
+            <p>Kamera Mini 4 Pro se chlubí <b>1/1,3palcovým snímačem CMOS</b> s funkcí Dual Native ISO Fusion, <b>clonou f/1,7</b> a 2,4μm pixely 4 v 1, takže snadno zachytíte i složitější detaily. Díky <b>HDR videu v 4K/60 fps kvalitě</b> a zpomalenému videu při <b>4K/100 fps</b> můžete zachytit detailní záběry, zatímco se <b>10-bit D-Log M</b> postará o ohromující škálu 1,07 bilionu barev a&nbsp;HLG&nbsp;zase o větší flexibilitu při editaci a sdílení. HLG díky vysokému dynamickému rozsahu zaručuje, že <b>barvy a jas zůstanou přirozené</b> a realistické <b>bez nutnosti úprav</b> nebo konverze formátu.</p>
             <figure class="img-block">
                 <img class="img-fluid" src="./images/dron-v-letu.avif" alt="dron-v-letu">
                 <figcaption class="img-block__caption">Pohed zpředu na dron DJI Mini Pro 4</figcaption>
@@ -34,8 +34,25 @@
                 <p class="heading heading__h3">Kvalitní noční záběry z dronu a RAW</p>
             </header>
             <div class="text-box__content">
-                <p class="">Vylepšený algoritmus redukce šumu nočních snímků u modelu Mini 4 Pro vám pomůže pořizovat jasnější a kvalitnější záběry, i za šera nebo v noci. Každý drobný detail navíc můžete zaznamenat díky 48MP RAW a nové generaci SmartPhoto, která kombinuje HDR zobrazování, rozpoznávání scén a mnoho dalších funkcí.</p>
+                <p class="text-box__text">Vylepšený algoritmus redukce šumu nočních snímků u modelu Mini 4 Pro vám pomůže pořizovat jasnější a kvalitnější záběry, i za šera nebo v&nbsp;noci. Každý drobný detail navíc můžete zaznamenat díky 48MP RAW a nové generaci SmartPhoto, která kombinuje HDR zobrazování, rozpoznávání scén a mnoho dalších funkcí.</p>
             </div>
+        </section>
+        <section class="text-box text-box-nopadding">
+            <header class="text-box__title">
+                <p class="heading heading__h3">Chytré režimy pořizování záběrů</p>
+            </header>
+            <div class="text-box__content">
+                <p class="text-box__text">Mini 4 Pro nabízí 3 způsoby, jak můžete snadno pořídit snímky, které potřebujete:&nbsp;Spotlight,&nbsp;Point of Interest&nbsp;a novou revoluční funkci&nbsp;ActiveTrack 360°&nbsp;s vylepšenými možnostmi sledování objektu. K&nbsp;dispozici jsou vám jako obvykle také automatické chytré režimy.</p>
+                <ul class="text-box__list">
+                    <li><b>MasterShots</b>&nbsp;nabízí dynamické šablony pro pohyby kamerou přizpůsobené pro portrétní snímky, záběry zblízka, nebo z velké vzdálenosti.</li>
+                    <li><b>QuickShots</b>&nbsp;nabízí režimy Dronie, Circle, Helix, Rocket, Boomerang a Asteroid.</li>
+                    <li><b>Hyperlapse</b>&nbsp;nabízí režimy&nbsp;Free, Waypoint, Circle&nbsp;a&nbsp;Course Lock&nbsp;s neomezenou dobou snímání a podporuje také vytváření kompozice během natáčení.</li>
+                    <li><b>Panorama</b>&nbsp;podporuje&nbsp;180°, Wide, Vertical&nbsp;a&nbsp;Sphere&nbsp;panoramatické snímky.</li>
+                </ul>
+            </div>
+        </section>
+        <section class="text-box text-box-nopadding">
+            <ul class="text-box__list text-box__list-inline"></ul>
         </section>
     </main>
 </body>
