--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="myscripts.js">
+
+    </script>
     <title>Boxmodel Drone 2025</title>
 </head>
 <body>
@@ -44,16 +47,67 @@
             <div class="text-box__content">
                 <p class="text-box__text">Mini 4 Pro nabízí 3 způsoby, jak můžete snadno pořídit snímky, které potřebujete:&nbsp;Spotlight,&nbsp;Point of Interest&nbsp;a novou revoluční funkci&nbsp;ActiveTrack 360°&nbsp;s vylepšenými možnostmi sledování objektu. K&nbsp;dispozici jsou vám jako obvykle také automatické chytré režimy.</p>
                 <ul class="text-box__list">
-                    <li><b>MasterShots</b>&nbsp;nabízí dynamické šablony pro pohyby kamerou přizpůsobené pro portrétní snímky, záběry zblízka, nebo z velké vzdálenosti.</li>
-                    <li><b>QuickShots</b>&nbsp;nabízí režimy Dronie, Circle, Helix, Rocket, Boomerang a Asteroid.</li>
-                    <li><b>Hyperlapse</b>&nbsp;nabízí režimy&nbsp;Free, Waypoint, Circle&nbsp;a&nbsp;Course Lock&nbsp;s neomezenou dobou snímání a podporuje také vytváření kompozice během natáčení.</li>
-                    <li><b>Panorama</b>&nbsp;podporuje&nbsp;180°, Wide, Vertical&nbsp;a&nbsp;Sphere&nbsp;panoramatické snímky.</li>
+                    <li class="list_item list_item--blue"><b>MasterShots</b>&nbsp;nabízí dynamické šablony pro pohyby kamerou přizpůsobené pro portrétní snímky, záběry zblízka, nebo z velké vzdálenosti.</li>
+                    <li class="list_item list_item--blue"><b>QuickShots</b>&nbsp;nabízí režimy Dronie, Circle, Helix, Rocket, Boomerang a Asteroid.</li>
+                    <li class="list_item list_item--blue"><b>Hyperlapse</b>&nbsp;nabízí režimy&nbsp;Free, Waypoint, Circle&nbsp;a&nbsp;Course Lock&nbsp;s neomezenou dobou snímání a podporuje také vytváření kompozice během natáčení.</li>
+                    <li class="list_item list_item--blue"><b>Panorama</b>&nbsp;podporuje&nbsp;180°, Wide, Vertical&nbsp;a&nbsp;Sphere&nbsp;panoramatické snímky.</li>
                 </ul>
             </div>
         </section>
+
         <section class="text-box text-box-nopadding">
-            <ul class="text-box__list text-box__list-inline"></ul>
+            <div class="card">
+                <img class="img-fluid" src="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.webp" alt="male baleni"/>
+                <p class="card__h">Dron DJI Mini 4 Pro + RC-N2</p>
+                <p>V&nbsp;tomto balíčku získáte dron DJI Mini 4&nbsp;Pro se základním ovladačem DJI&nbsp;RC-NC.</p>
+                <a href="#" class="button button--aqua">zakoupit nyní</a>
+            </div>
+            <div class="card">
+                <img class="img-fluid" src="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.webp" alt="velke baleni"/>
+                <p class="card__h">Dron DJI Mini 4 Pro Fly More Combo + DJI RC 2</p>
+                <p>Dron DJI Mini 4&nbsp;Pro s&nbsp;ovladačem s&nbsp;vestavěným dispejem DJI RC 2&nbsp;a dalším praktickým příslušenstvím.</p>
+                <a href="#" class="button button--aqua">zakoupit nyní</a>
+            </div>
         </section>
+
+        <section class="text-box">
+            <p>Mini to the</p>
+            <p>Max</p>
+            <p>
+                Nakupte nyní ve verzi Fly More Combo s 10% slevou za jedinečnou cenu
+                28 990 Kč.
+            </p>
+        </section>
+        <div class="div-gray">
+
+        <a href="#" class="button">zakoupit se slevou</a>
+        </div>
+        <h2>Galerie</h2>
+        <div class="div-img">
+        <img
+            src="./images/gallery/dron-dji-mini-4-pro-a-ovladac-dji-rc-2.webp"
+            alt="ovladac"
+            class="figure-image img-top"
+        />
+        </div>
+        <div class="div-img">
+        <img
+            src="./images/gallery/ovladani-dron-dji-mini-4-pro.webp"
+            alt="ovladani"
+            class="figure-image"
+        />
+        </div>
+        <div class="div-img">
+        <img
+            src="./images/gallery/dron-dji-mini-4-pro-a-zapad-slunce.webp"
+            alt="zapad slunce"
+            class="figure-image"
+        />
+        </div>
+  </main>
+  <footer>
+    <p>www.dji.com</p>
+  </footer>
     </main>
 </body>
 </html>
