--- a/index.html
+++ b/index.html
@@ -55,33 +55,35 @@
             </div>
         </section>
 
-        <section class="text-box text-box-nopadding">
-            <div class="card">
+        <section class="products">
+            <div class="products__item">
                 <img class="img-fluid" src="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.webp" alt="male baleni"/>
-                <p class="card__h">Dron DJI Mini 4 Pro + RC-N2</p>
+                <p class="products__item__h">Dron DJI Mini 4 Pro + RC-N2</p>
                 <p>V&nbsp;tomto balíčku získáte dron DJI Mini 4&nbsp;Pro se základním ovladačem DJI&nbsp;RC-NC.</p>
                 <a href="#" class="button button--aqua">zakoupit nyní</a>
             </div>
-            <div class="card">
+            <div class="products__item">
                 <img class="img-fluid" src="./images/dron-DJI-Mini-4-Pro-Fly-More-Combo-DJI-RC-2.webp" alt="velke baleni"/>
-                <p class="card__h">Dron DJI Mini 4 Pro Fly More Combo + DJI RC 2</p>
+                <p class="products__item__h">Dron DJI Mini 4 Pro Fly More Combo + DJI RC 2</p>
                 <p>Dron DJI Mini 4&nbsp;Pro s&nbsp;ovladačem s&nbsp;vestavěným dispejem DJI RC 2&nbsp;a dalším praktickým příslušenstvím.</p>
                 <a href="#" class="button button--aqua">zakoupit nyní</a>
             </div>
         </section>
 
-        <section class="text-box">
-            <p>Mini to the</p>
-            <p>Max</p>
-            <p>
+        <section class="text-box text-box--gre">
+            <header class="text-box__title text-box__title--center">
+                <span class="heading__big">Mini to the</span>
+                <span class="heading__bigger">Max</span>
+            </header>
+
+            <p class="text-box__text">
                 Nakupte nyní ve verzi Fly More Combo s 10% slevou za jedinečnou cenu
                 28 990 Kč.
             </p>
-        </section>
-        <div class="div-gray">
+            <a href="#" class="button">zakoupit se slevou</a>
 
-        <a href="#" class="button">zakoupit se slevou</a>
-        </div>
+        </section>
+
         <h2>Galerie</h2>
         <div class="div-img">
         <img
