--- a/index.html
+++ b/index.html
@@ -70,44 +70,31 @@
             </div>
         </section>
 
-        <section class="text-box text-box--gre">
+        <section class="text-box text-box--grey">
             <header class="text-box__title text-box__title--center">
                 <span class="heading__big">Mini to the</span>
                 <span class="heading__bigger">Max</span>
             </header>
 
-            <p class="text-box__text">
+            <p class="text-box__text text-box__text--center">
                 Nakupte nyní ve verzi Fly More Combo s 10% slevou za jedinečnou cenu
                 28 990 Kč.
             </p>
-            <a href="#" class="button">zakoupit se slevou</a>
+            <p class="text-box__text text-box__text--center">
+                <a href="#" class="button button--center button--light">zakoupit se slevou</a>
+            </p>
 
         </section>
+        <section class="gallery">
+            <h2>Galerie</h2>
+            <div class=""><a 
+                class="gallery__item gallery__item--large" href="./images/gallery/dron-dji-mini-4-pro-a-ovladac-dji-rc-2.webp"><img class="img-fluid" src="./images/gallery/dron-dji-mini-4-pro-a-ovladac-dji-rc-2.webp" alt="dron dji mini 4 pro a ovladac dji rc2"></a><a 
+                class="gallery__item gallery__item--small" href="./images/gallery/ovladani-dron-dji-mini-4-pro-tn.webp"><img class="img-fluid" src="./images/gallery/ovladani-dron-dji-mini-4-pro-tn.webp" alt="dron dji mini 4 pro fly more combo"></a><a 
+                class="gallery__item gallery__item--small" href="./images/gallery/dron-dji-mini-4-pro-a-zapad-slunce.webp"><img class="img-fluid" src="./images/gallery/dron-dji-mini-4-pro-a-zapad-slunce-tn.jpg" alt="dron dji mini 4 pro fly more combo"></a></div>
+        </section>
 
-        <h2>Galerie</h2>
-        <div class="div-img">
-        <img
-            src="./images/gallery/dron-dji-mini-4-pro-a-ovladac-dji-rc-2.webp"
-            alt="ovladac"
-            class="figure-image img-top"
-        />
-        </div>
-        <div class="div-img">
-        <img
-            src="./images/gallery/ovladani-dron-dji-mini-4-pro.webp"
-            alt="ovladani"
-            class="figure-image"
-        />
-        </div>
-        <div class="div-img">
-        <img
-            src="./images/gallery/dron-dji-mini-4-pro-a-zapad-slunce.webp"
-            alt="zapad slunce"
-            class="figure-image"
-        />
-        </div>
   </main>
-  <footer>
+  <footer class="footer">
     <p>www.dji.com</p>
   </footer>
     </main>
